# x-mas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
xmas/: __main__.py  scene.py
